ingress/k8s/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app2-deployment
  labels:
    app: simple-app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-app2
  template:
    metadata:
      labels:
        app: simple-app2
    spec:
      containers:
      - name: simple-app2
        image: simple-app2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5001
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 5001
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app2-service
spec:
  selector:
    app: simple-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
